--- a/Views/Orders/SavePaymentMethod.cshtml
+++ b/Views/Orders/SavePaymentMethod.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Save Payment Method";
 }
 
-<h1 class="mb-3">Save Payment Method</h1>
+<h1 class="mb-3 text-center">Save Payment Method</h1>
 
-<div class="row">
-    <div class="col-md-8">
-        <div class="card">
+<div class="row justify-content-center">
+    <div class="col-lg-10 col-xl-8">
+        <div class="card mb-4">
             <div class="card-header">
                 <h5>Order Summary</h5>
             </div>
@@ -25,7 +25,6 @@
         </div>
     </div>
     
-    <div class="col-md-4">
         <div class="card">
             <div class="card-header">
                 <h5>Payment Method</h5>
@@ -80,5 +79,4 @@
                 </div>
             </div>
         </div>
-    </div>
 </div>
